# scripts

./: .gitignore  README.md  convert_document_to_pdf.py  convert_mov_to_mp4.py  convert_pdf_to_png.py  convert_stl_to_obj.py  create_video_from_images.py  crop_or_copy_16_9_images.py  download_bilibili_audio.py  extract_audio_from_mp4.py  extract_images_from_pdf.py  pyproject.toml  requirements.txt  sort_csv_by_column.py  split_pdf.py
3d/: batch_simplify_mesh.py  convert_stl_to_obj.py  glb2obj.py  simplify_mesh.py  stl2obj.py
audio/: amplify_mp3.py
image/: convert_heic.py  crop_or_copy_16_9_images.py  horizontal_image_concatenator.py
misc/: compress_directory.py  convert_encoding.py  delete_empty_dirs.py  find_cuda_dependencies.py  list_filenames_without_suffix.py  qt_deploy.py  replace_file_suffixes.py  sort_csv_by_column.py  txt_to_epub.py
pdf/: convert_document_to_pdf.py  convert_pdf_to_png.py  extract_images_from_pdf.py  extract_pdf_pages.py  trim_margins.py
spider/: download_bilibili_audio.py
video/: change_video_speed.py  convert_mov_files.py  convert_mov_to_mp4.py  create_video_from_images.py  crop_video.py  extract_audio_from_mp4.py  merge_videos_2x2.py
visualization/: visualize_exp_decay.py
