[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "ffmpeg-python>=0.2.0",
    "fire>=0.7.1",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "trimesh>=4.8.1",
]

[project.optional-dependencies]
heif = [
    "pyheif>=0.8.0",
]
